--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,7 @@ jobs:
     container: golang:1.22
     steps:
       - uses: actions/checkout@v4
-      - name: Run Unit Tests
+      - name: Run unit tests
         run: GOOS=linux GOARCH=amd64 go test
       - name: Vet
         run: |
